Update first_index.html and views.py to display movie details

--- a/CRUD/first/templates/first_index.html
+++ b/CRUD/first/templates/first_index.html
@@ -1,2 +1,4 @@
-<b>Welcome to first page</b>
-<p>Using templates here</p>
+<p><b>Image</b></p>
+<p><b>Title:{{title}}</b></p>
+<p><b>Desc:</b>{{desc}}</p>
+<p><b>Year:{{year}}</b></p>
