Add success message display in first_index.html and update movie_dict in views.py

--- a/CRUD/first/templates/first_index.html
+++ b/CRUD/first/templates/first_index.html
@@ -2,3 +2,8 @@
 <p><b>Title:{{title}}</b></p>
 <p><b>Desc:</b>{{desc}}</p>
 <p><b>Year:{{year}}</b></p>
+{% if success %}
+<p>Movie was success</p>
+{% else %}
+<p>Movie was not success</p>
+{% endif %}
