Update movie display logic in first_index.html and enhance movie_dict in views.py

--- a/CRUD/first/templates/first_index.html
+++ b/CRUD/first/templates/first_index.html
@@ -1,9 +1,12 @@
-<p><b>Image</b></p>
-<p><b>Title:{{title}}</b></p>
-<p><b>Desc:</b>{{desc}}</p>
-<p><b>Year:{{year}}</b></p>
-{% if success %}
+
+{% for movie in movies %}
+<b>Image</b>
+<p>Title: {{movie.title}}</p>
+<p>Desc: {{movie.desc}}</p>
+<p>Year: {{movie.year}}</p>
+{% if movie.success %}
 <p>Movie was success</p>
 {% else %}
 <p>Movie was not success</p>
 {% endif %}
+{% endfor %}
