Add static files configuration and enhance movie list template with dynamic content

--- a/CRUD/movies/templates/blank_layout.html
+++ b/CRUD/movies/templates/blank_layout.html
@@ -1,4 +1,5 @@
-<h1>Movie Project</h1>
+{%load static%}
+<h1> <img src="{%static 'images/movie_img.jpg'%}" alt="Movie logo"  height="10%"> Movie Project</h1>
 {% include 'menu.html' %}
 {% block content %}
 <p>Make your content</p>
