--- a/CRUD/movies/templates/create.html
+++ b/CRUD/movies/templates/create.html
@@ -2,4 +2,13 @@
 
 {%block content%}
 <h1>Create</h1>
+
+<form action="" method="post" enctype="multipart/form-data">
+    {%csrf_token%}
+Title: <input type="text" name="title">
+Desc: <input type="text" name="desc">
+Year: <input type="text" name="year">
+Success: <input type="text" name="success">
+<button type="submit">Create</button>
+</form>
 {%endblock content%}
