--- a/CRUD/movies/templates/menu.html
+++ b/CRUD/movies/templates/menu.html
@@ -3,5 +3,5 @@
     <li><a href="{% url 'create' %}">Create</a></li>
     <li><a href="{% url 'edit' %}">Edit</a></li>
     <li><a href="{% url 'list' %}">List</a></li>
-    <li><a href="{% url 'movie_form_create' %}">Movie Form</a></li>
+    <li><a href="{% url 'movie_form_create' %}">Movie: Form Input</a></li>
 </ul>
