--- a/CRUD/movies/templates/blank_layout.html
+++ b/CRUD/movies/templates/blank_layout.html
@@ -1,6 +1,19 @@
 {%load static%}
-<h1> <img src="{%static 'images/movie_img.jpg'%}" alt="Movie logo"  height="10%"> Movie Project</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+</head>
+<body>
+    
+    <h1 class="h1"><img class="movie_logo" src="{%static 'images/movie_img.jpg'%}" alt="Movie logo" >  Movie Project</h1>
 {% include 'menu.html' %}
 {% block content %}
 <p>Make your content</p>
 {% endblock content %}
+</body>
+</html>
