Add movie list view and template, update create form with custom input

--- a/CRUD/movies/templates/create.html
+++ b/CRUD/movies/templates/create.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 <h1>Create</h1>
-
+<p><b>Custom Form Input</b></p>
 <form action="" method="post" enctype="multipart/form-data">
     {%csrf_token%}
 Title: <input type="text" name="title">
