Navigation menu for movies

--- a/CRUD/movies/templates/menu.html
+++ b/CRUD/movies/templates/menu.html
@@ -1,7 +1,7 @@
 <ul>
     <li><a href="{% url 'first_page' %}">First Page</a></li>
     <li><a href="{% url 'create' %}">Create</a></li>
-    <li><a href="{% url 'edit' %}">Edit</a></li>
+    <!-- <li><a href="{% url 'edit' %}">Edit</a></li> -->
     <li><a href="{% url 'list' %}">List</a></li>
     <li><a href="{% url 'movie_form_create' %}">Movie: Form Input</a></li>
 </ul>
