Update movie form URLs and templates for improved navigation and layout

--- a/CRUD/movies/templates/menu.html
+++ b/CRUD/movies/templates/menu.html
@@ -4,4 +4,5 @@
     <!-- <li><a href="{% url 'edit' %}">Edit</a></li> -->
     <li><a href="{% url 'list' %}">List</a></li>
     <li><a href="{% url 'movie_form_create' %}">Movie: Form Input</a></li>
+    <li><a href="{%url 'movie_form_list'%}">Movie: Form List</a></li>
 </ul>
