--- a/CRUD/movies/templates/movie_form.html
+++ b/CRUD/movies/templates/movie_form.html
@@ -1,3 +1,8 @@
+
+
+
+{% extends 'blank_layout.html' %}
+{%block content%}
 <h1>Create a New Movie</h1>
 
 <form method="POST">
@@ -5,3 +10,4 @@
     {{ form.as_p }}
     <button type="submit">Save</button>
 </form>
+{%endblock content%}
