Refactor movie app: remove unused 'first' app, update URLs, and add success page

--- a/CRUD/movies/templates/Confirm_delete.html
+++ b/CRUD/movies/templates/Confirm_delete.html
@@ -3,5 +3,5 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit">Yes, delete</button>
-    <a href="{% url 'first_page' %}">Cancel</a>
+    <a href="{% url 'movie_form_list' %}">Cancel</a>
 </form>
