--- a/CRUD/movies/templates/formlist.html
+++ b/CRUD/movies/templates/formlist.html
@@ -1,7 +1,7 @@
 {% extends 'blank_layout.html' %}
 {%block content%}
 {%for mov in movie%}
-<p>Title: <b>{{mov.title | upper}}</b></p>
+<p>Title {{mov.id}}: <b>{{mov.title | upper}}</b></p>
 <p>Desc: {{mov.desc | default:"No data available"}}</p>
 <p>Year: {{mov.year}}</p>
 {% if mov.success %}
