--- a/CRUD/movies/templates/menu.html
+++ b/CRUD/movies/templates/menu.html
@@ -4,4 +4,5 @@
     <li><a href="{% url 'list' %}">List</a></li>
     <li><a href="{% url 'movie_form_create' %}">Movie: Form Input</a></li>
     <li><a href="{%url 'movie_form_list'%}">Movie: Form List</a></li>
+    <li><a href="{%url 'custom_logout'%}">LogOut</a></li>
 </ul>
